[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.7.2",
]
