[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "gunicorn>=23.0.0",
    "joblib>=1.5.2",
    "marshmallow>=4.1.1",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
]
